# galdr

./: .gitignore  AGENT_BUILD_SYSTEM.md  BUILDING_AN_AGENT.md  BUILDING_A_DISPATCHER.md  CLAUDE.md  COMPOSITION_ENGINE.md  COMPOSITION_ENGINE_DESIGN.md  CONTEXT_MAP.md  CUSTOM_WRITE_TOOL.md  HANDOVER.md  MIGRATION_TO_L1.md  PLAN_COMPOSITION_ENGINE.md  QUICKSTART.md  README.md  TRUNK_RESOLVER_DESIGN.md  codegen_schemas.toml  generate_structures.py  pyproject.toml
.gleipnir/: rules.toml  tests.toml
agent_control_surfaces/: ANTI_PATTERNS.md  CONSTRAINTS.md  CONTEXT_CAPTURE.md  CRITICAL_RULES.md  CROSS_SECTION_PATTERNS.md  DISPATCH_SYNTHESIS_TEMPLATE.md  DISPATCH_TEMPLATE.md  DISPATCH_TOML_RESOLVER.md  EXAMPLES.md  IDENTITY.md  INPUT.md  INSTRUCTIONS.md  SECURITY_BOUNDARY.md  TOML_ARCHITECTURE.md  WRITING_OUTPUT.md
analysis/: CONTEXT_COHERENCY_AUDIT.md  CROSS_AXIS_NAMING_INVENTORY.md  NAMING_ALIGNMENT_PLAN.md  NAMING_CONVENTION_ANALYSIS.md  output_driven_knobs_v2.md  output_driven_knobs_v3.md
archive/: ARCHIVE_INDEX.md  TRUNK_RESOLVER_DESIGN.md
extracted/: content.toml  display.toml  structure.toml
plans/: DEFERRED_RENDERING_FEATURES.md  composition-engine-master-plan.md
probe/: body_suffix_coverage.py  bundle_full.py  bundling.py  slots_data_content.py  slots_trunk_match.py
recipes/: standard-v1.toml
redesign/: 01_PROCESSING_FLOW.md  02_INTERMEDIATE_CONTAINER.md  03_CHUNKING.md  04_HOURGLASS_RESOLVER.md  05_BODY_ORDERING.md  06_RENDERER_TYPES.md  07_TRUNK_MATCHING.md  08_NAMING_REQUIREMENTS.md  AGENT_BUILD_SYSTEM.md  COMPOSITION_ENGINE_DESIGN.md  (+2 more)
(+184 files in other folders)
