[project]
name = "galdr"
version = "0.1.0"
description = "Template renderer — transforms structured render data into deployable agent artifacts via Jinja2 templates"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1",
    "loguru>=0.7",
    "pydantic>=2.0",
]

[project.scripts]
galdr = "galdr.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "gleipnir",
]

[tool.uv.sources]
gleipnir = { path = "/Users/johnny/.ai/gleipnir", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
