[project]
name = "galdr"
version = "0.1.0"
description = "Composition engine — transforms structured render data into deployable agent artifacts"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7",
    "pydantic>=2.0",
    "typer>=0.15",
]

[project.scripts]
galdr = "galdr.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "datamodel-code-generator>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
